--- a/asterisk/config/pjsip_wizard.conf
+++ b/asterisk/config/pjsip_wizard.conf
@@ -20,3 +20,22 @@ outbound_auth/password = SIPPROXY_SECRET_PLACEHOLDER
 registration/expiration = 600
 registration/max_retries = 1000000
 registration/retry_interval = 10
+
+[agent_template](!)
+type = wizard
+transport = transport-tcp
+accepts_registrations = yes
+endpoint/context = local-ctx
+endpoint/rtcp_mux = yes
+endpoint/allow = ulaw,alaw,g722,opus
+endpoint/dtmf_mode = rfc4733
+endpoint/direct_media = no
+endpoint/disallow = all
+endpoint/accept_multiple_sdp_answers = yes
+
+[agent](agent_template)
+type = wizard
+inbound_auth/username = ${PJSIP_WIZARD_ENDPOINT}
+inbound_auth/password = AGENT_PASSWORD_PLACEHOLDER
+aor/max_contacts = 5
+aor/qualify_frequency = 30
