--- a/mods/autopilot/package.json
+++ b/mods/autopilot/package.json
@@ -43,7 +43,7 @@
     "@langchain/groq": "^0.1.3",
     "@langchain/ollama": "^0.1.6",
     "@langchain/openai": "^0.4.4",
-    "chalk": "^4.1.2",
+    "ansis": "^3.17.0",
     "cheerio": "^1.0.0",
     "cli-table3": "^0.6.5",
     "dotenv": "^16.4.5",
