fix: wrong name on oclif help class

--- a/mods/ctl/package.json
+++ b/mods/ctl/package.json
@@ -41,7 +41,7 @@
     "commands": "./dist/commands",
     "dirname": "fonoster",
     "topicSeparator": ":",
-    "helpClass": "./dist/help",
+    "helpClass": "./dist/Help",
     "plugins": [
       "@oclif/plugin-warn-if-update-available"
     ],
