--- a/mods/autopilot/package.json
+++ b/mods/autopilot/package.json
@@ -40,6 +40,7 @@
     "@fonoster/voice": "^0.9.46",
     "@langchain/community": "^0.3.32",
     "@langchain/core": "^0.3.40",
+    "@langchain/google-genai": "^0.1.11",
     "@langchain/groq": "^0.1.3",
     "@langchain/ollama": "^0.1.6",
     "@langchain/openai": "^0.4.4",
