--- a/mods/autopilot/package.json
+++ b/mods/autopilot/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.712.0",
     "@fonoster/common": "^0.9.47",
+    "@dmitryrechkin/json-schema-to-zod": "^1.0.1",
     "@fonoster/logger": "^0.9.46",
     "@fonoster/sdk": "^0.9.47",
     "@fonoster/types": "^0.9.46",
