feat(dashboard): update routing configuration and add base folder structure

--- a/mods/dashboard/package.json
+++ b/mods/dashboard/package.json
@@ -14,6 +14,11 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fonoster/sdk": "^0.9.57",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
     "isbot": "^5.1.17",
