chore: use a screaming-architecture for better visibility and scalability

--- a/mods/dashboard/tsconfig.json
+++ b/mods/dashboard/tsconfig.json
@@ -15,7 +15,8 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["src/app/*"],
+      "@fonoster/*": ["./src/*"],
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
