--- a/mods/dashboard/package.json
+++ b/mods/dashboard/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^7.0.1",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
+    "@tanstack/react-query": "^5.72.2",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
