chore(dashboard): remove unnecessary level of folders

--- a/mods/dashboard/tsconfig.json
+++ b/mods/dashboard/tsconfig.json
@@ -15,7 +15,7 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/app/*"],
+      "~/*": ["src/*"],
       "@fonoster/*": ["./src/*"],
     },
     "esModuleInterop": true,
