feat(dashboard): add query-client

--- a/mods/dashboard/tsconfig.json
+++ b/mods/dashboard/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "~/*": ["src/*"],
       "@fonoster/*": ["./src/*"],
+      "@design-system/*": ["./src/core/components/design-system/*"],
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
