--- a/mods/dashboard/Dockerfile
+++ b/mods/dashboard/Dockerfile
@@ -1,22 +1,22 @@
-FROM node:20-alpine AS development-dependencies-env
+FROM node:20-alpine AS dev-deps
 COPY . /app
 WORKDIR /app
 RUN npm ci
 
-FROM node:20-alpine AS production-dependencies-env
+FROM node:20-alpine AS prod-deps
 COPY ./package.json package-lock.json /app/
 WORKDIR /app
 RUN npm ci --omit=dev
 
-FROM node:20-alpine AS build-env
+FROM node:20-alpine AS build
 COPY . /app/
-COPY --from=development-dependencies-env /app/node_modules /app/node_modules
+COPY --from=dev-deps /app/node_modules /app/node_modules
 WORKDIR /app
 RUN npm run build
 
 FROM node:20-alpine
 COPY ./package.json package-lock.json /app/
-COPY --from=production-dependencies-env /app/node_modules /app/node_modules
-COPY --from=build-env /app/build /app/build
+COPY --from=prod-deps /app/node_modules /app/node_modules
+COPY --from=build /app/build /app/build
 WORKDIR /app
 CMD ["npm", "run", "start"]
