feat(dashboard): add storybook deps

--- a/mods/dashboard/package.json
+++ b/mods/dashboard/package.json
@@ -1,42 +1,63 @@
 {
   "name": "@fonoster/dashboard",
-  "private": true,
-  "type": "module",
-  "description": "Fonoster Dashboard",
   "version": "0.0.1",
+  "private": true,
+  "description": "Fonoster Dashboard",
+  "homepage": "https://fonoster.com",
   "license": "MIT",
   "author": "Fonoster Team <team@fonoster.com>",
-  "homepage": "https://fonoster.com",
+  "type": "module",
   "scripts": {
     "build": "react-router build",
+    "build:storybook": "storybook build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
+    "storybook": "storybook dev -p 6006",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fonoster/sdk": "^0.9.57",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
     "@tanstack/react-query": "^5.72.2",
     "@tanstack/react-query-devtools": "^5.72.2",
-    "isbot": "^5.1.17",
+    "@tanstack/react-table": "^8.21.2",
+    "isbot": "^5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-router": "^7.5.0",
+    "sonner": "^2.0.3",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.6",
     "@react-router/dev": "^7.5.0",
+    "@storybook/addon-designs": "^8.2.0",
+    "@storybook/addon-docs": "^8.6.3",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.3",
+    "@storybook/addon-links": "^8.6.3",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/addon-themes": "^8.6.3",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/manager-api": "^8.6.3",
+    "@storybook/nextjs": "^8.6.3",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
+    "@storybook/theming": "^8.6.3",
+    "@storybook/types": "^8.6.3",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "react-router-devtools": "^1.1.0",
+    "storybook": "^8.6.12",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
