--- a/mods/dashboard/package.json
+++ b/mods/dashboard/package.json
@@ -16,6 +16,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fonoster/sdk": "^0.9.57",
@@ -45,7 +46,6 @@
     "@storybook/addon-interactions": "^8.6.3",
     "@storybook/addon-links": "^8.6.3",
     "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/addon-themes": "^8.6.3",
     "@storybook/blocks": "^8.6.12",
     "@storybook/manager-api": "^8.6.3",
     "@storybook/nextjs": "^8.6.3",
