--- a/.github/workflows/check-lint-and-format.yaml
+++ b/.github/workflows/check-lint-and-format.yaml
@@ -18,11 +18,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "22.x"
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run lint (includes format checking)
         run: npm run lint 
