fix: add missing voice extension

--- a/asterisk/config/extensions.conf
+++ b/asterisk/config/extensions.conf
@@ -18,3 +18,6 @@ exten => _+X.,1,NoOp(E.164 Number: ${EXTEN})
 exten => _X.,1,NoOp(Non-E.164 Number: ${EXTEN})
   same => n,GoSub(local-ctx-common,start,1)
   same => n,Hangup()
+exten => voice,1,NoOp(Directly connecting to the Voice server)
+  same => n,GoSub(local-ctx-common,start,1)
+  same => n,Hangup()
