--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,7 +31,9 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-          npm install
+          # FIXME: This is a workaround to prevent this issue:
+          # https://github.com/microsoft/onnxruntime/issues/24770
+          ONNXRUNTIME_NODE_INSTALL=skip npm install
           npm run build
 
       # We will do this manually for now
