--- a/.github/workflows/check-lint-and-format.yaml
+++ b/.github/workflows/check-lint-and-format.yaml
@@ -22,7 +22,9 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        # FIXME: This is a workaround to prevent this issue:
+        # https://github.com/microsoft/onnxruntime/issues/24770
+        run: ONNXRUNTIME_NODE_INSTALL=skip npm install
 
       - name: Run lint (includes format checking)
         run: npm run lint 
