--- a/.github/workflows/publish-apiserver.yaml
+++ b/.github/workflows/publish-apiserver.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "22.x"
 
       - name: Get version
         run: |
@@ -26,7 +26,9 @@ jobs:
           echo "LERNA_VERSION=$lerna_version" >> $GITHUB_ENV
 
       - name: Install dependencies and build the project
-        run: npm install && npm run build
+        # FIXME: This is a workaround to prevent this issue:
+        # https://github.com/microsoft/onnxruntime/issues/24770
+        run: ONNXRUNTIME_NODE_INSTALL=skip npm install && npm run build
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
