--- a/.github/workflows/test-sdk-install.yaml
+++ b/.github/workflows/test-sdk-install.yaml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Install and build the SDK with npm
         run: |
-          npm install
+          # FIXME: This is a workaround to prevent this issue:
+          # https://github.com/microsoft/onnxruntime/issues/24770
+          ONNXRUNTIME_NODE_INSTALL=skip npm install
           npm run build
 
       - name: Pack the SDK
@@ -58,7 +60,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install Yarn
-        run: npm install -g yarn
+        # FIXME: This is a workaround to prevent this issue:
+        # https://github.com/microsoft/onnxruntime/issues/24770
+        run: ONNXRUNTIME_NODE_INSTALL=skip npm install -g yarn
 
       - name: Download SDK tarball
         uses: actions/download-artifact@v4
