--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -21,11 +21,13 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: "20.x"
+        node-version: "22.x"
 
     - name: Install dependencies and build
       run: |
-        npm install
+        # FIXME: This is a workaround to prevent this issue:
+        # https://github.com/microsoft/onnxruntime/issues/24770
+        ONNXRUNTIME_NODE_INSTALL=skip npm install
         npm run build
 
     - name: Run unit tests
