refactor: moving intelligence eval to apiserver

--- a/mods/apiserver/tsconfig.json
+++ b/mods/apiserver/tsconfig.json
@@ -19,6 +19,9 @@
     },
     {
       "path": "../types",
+    },
+    {
+      "path": "../autopilot",
     }
   ],
   "exclude": ["node_modules", "dist", "test"]
