--- a/mods/apiserver/package.json
+++ b/mods/apiserver/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@deepgram/sdk": "^3.5.1",
     "@fonoster/authz": "^0.13.2",
+    "@fonoster/autopilot": "^0.13.2",
     "@fonoster/common": "^0.13.2",
     "@fonoster/identity": "^0.13.2",
     "@fonoster/logger": "^0.13.2",
