--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,9 +31,7 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-          # FIXME: This is a workaround to prevent this issue:
-          # https://github.com/microsoft/onnxruntime/issues/24770
-          ONNXRUNTIME_NODE_INSTALL=skip npm install
+          npm install
           npm run build
 
       # We will do this manually for now
