--- a/mods/apiserver/package.json
+++ b/mods/apiserver/package.json
@@ -52,6 +52,7 @@
     "uuid": "^11.0.3",
     "validator": "^13.12.0",
     "wait-port": "^1.1.0",
+    "wavefile": "^11.0.0",
     "zod": "^3.23.8"
   },
   "files": [
