--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -49,7 +49,7 @@ services:
       CONSOLE_PUBLISHER_ENABLED: "true"
     volumes:
       - ./etc/log4j2.yaml:/etc/routr/log4j2.yaml
-      - ./.keys:/etc/routr/keys
+      - ./.keys/public.pem:/etc/routr/keys/public.pem
 
   asterisk:
     build:
