--- a/mods/dashboard/.env.example
+++ b/mods/dashboard/.env.example
@@ -6,18 +6,25 @@
 # This is used to determine the environment in which the application is running.
 NODE_ENV=development
 
-# Indicates if the application is running in production mode
-# This is used to enable/disable certain features in the application.
+# Indicates whether the application is running in Cloud or Community
+# Used to enable or disable specific features based on the deployment type.
 #
-# e.g. (community, cloud)
+# Example: "cloud" or "community"
 DASHBOARD_EDITION=community
 
 ## -----------------------------------------------
 ## API
 ## -----------------------------------------------
 
-# The API URL - this is used to connect to the Fonoster API
+# API URL – used to connect to the Fonoster API.
+# For development, set this to your Envoy endpoint using the HTTP protocol
+# and enable DASHBOARD_ALLOW_INSECURE.
+#
+# Example: http://10.0.0.10:8449
 DASHBOARD_API_URL=https://api.fonoster.com
+
+# Insecure API Connection – set to true when connecting to an API without SSL
+DASHBOARD_ALLOW_INSECURE=false
 
 ## -----------------------------------------------
 ## Authentication - GitHub OAuth
