fix: add manual step to solve draft release issues

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      RELEASE: ${{ env.RELEASE }}
+      SHOULD_RELEASE: ${{ env.SHOULD_RELEASE }}
+      LERNA_VERSION: ${{ env.LERNA_VERSION }}
 
     steps:
       - name: Checkout
@@ -39,10 +40,10 @@ jobs:
         run: |
           release=$(.scripts/next-release.sh)
           echo "Next release: $release"
-          echo "RELEASE=$release" >> $GITHUB_ENV
+          echo "SHOULD_RELEASE=$release" >> $GITHUB_ENV
 
       - name: Publish packages to NPM
-        if: env.RELEASE != 'none'
+        if: env.SHOULD_RELEASE != 'none'
         run: |
           echo "NPM_TOKEN=${{ secrets.NPM_TOKEN }}" >> $GITHUB_ENV
           echo "GITHUB_TOKEN=${{ secrets.GH_PAT }}" >> $GITHUB_ENV
@@ -65,7 +66,7 @@ jobs:
           echo "LERNA_VERSION=$lerna_version" >> $GITHUB_ENV
 
       - name: Create release note
-        if: env.RELEASE != 'none'
+        if: env.SHOULD_RELEASE != 'none'
         id: changelog
         uses: loopwerk/tag-changelog@v1
         with:
@@ -74,7 +75,7 @@ jobs:
           config_file: ./.scripts/tag-changelog-config.cjs
 
       - name: Create draft release
-        if: env.RELEASE != 'none'
+        if: env.SHOULD_RELEASE != 'none'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -87,28 +88,53 @@ jobs:
   publish-apiserver:
     name: Publish APIServer to Docker Hub
     needs: [build]
-    if: needs.build.outputs.RELEASE != 'none'
+    if: needs.build.outputs.SHOULD_RELEASE != 'none'
     uses: ./.github/workflows/publish-apiserver.yaml
+    with:
+      version: ${{ env.LERNA_VERSION }}
     secrets: inherit
 
   publish-autopilot:
     name: Publish Autopilot to Docker Hub
     needs: [build]
-    if: needs.build.outputs.RELEASE != 'none'
+    if: needs.build.outputs.SHOULD_RELEASE != 'none'
     uses: ./.github/workflows/publish-autopilot.yaml
+    with:
+      version: ${{ env.LERNA_VERSION }}
     secrets: inherit
 
   publish-dashboard:
     name: Publish Dashboard to Docker Hub
     needs: [build]
-    if: needs.build.outputs.RELEASE != 'none'
+    if: needs.build.outputs.SHOULD_RELEASE != 'none'
     uses: ./.github/workflows/publish-dashboard.yaml
+    with:
+      version: ${{ env.LERNA_VERSION }}
     secrets: inherit
 
-  update-compose:
-    name: Update compose.yaml with new version tags
+  manual-approval:
+    name: Manual Approval for Release Finalization
     needs: [build, publish-apiserver, publish-autopilot, publish-dashboard]
-    if: needs.build.outputs.RELEASE != 'none'
+    if: needs.build.outputs.SHOULD_RELEASE != 'none'
+    runs-on: ubuntu-latest
+    environment: release-approval
+    steps:
+      - name: Wait for manual approval
+        run: |
+          echo "✅ All Docker images have been built and published successfully!"
+          echo "📦 Version: ${{ needs.build.outputs.LERNA_VERSION }}"
+          echo "🐳 Docker images published:"
+          echo "  - fonoster/apiserver:${{ needs.build.outputs.LERNA_VERSION }}"
+          echo "  - fonoster/autopilot:${{ needs.build.outputs.LERNA_VERSION }}"
+          echo "  - fonoster/dashboard:${{ needs.build.outputs.LERNA_VERSION }}"
+          echo ""
+          echo "Please review the draft release and Docker images."
+          echo "If everything looks good, approve this step to finalize the release."
+
+  finalize-release:
+    name: Finalize Release and Update Compose
+    needs: [build, manual-approval]
+    if: needs.build.outputs.SHOULD_RELEASE != 'none'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -117,10 +143,39 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GH_PAT }}
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22.x"
+
       - name: Get version from Lerna
         run: |
           lerna_version=$(node -p "require('./lerna.json').version")
           echo "LERNA_VERSION=$lerna_version" >> $GITHUB_ENV
+
+      - name: Find and publish release
+        run: |
+          # Get the release by tag
+          release_response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/tags/v${{ env.LERNA_VERSION }}")
+          
+          release_id=$(echo "$release_response" | jq -r '.id')
+          
+          if [ "$release_id" = "null" ] || [ -z "$release_id" ]; then
+            echo "Error: Could not find release with tag v${{ env.LERNA_VERSION }}"
+            exit 1
+          fi
+          
+          echo "Found release ID: $release_id"
+          
+          # Publish the release (remove draft status)
+          curl -X PATCH \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/$release_id" \
+            -d '{"draft": false}'
+          
+          echo "✅ Release v${{ env.LERNA_VERSION }} has been published"
 
       - name: Update compose.yaml with new version tags
         run: |
@@ -141,5 +196,16 @@ jobs:
           else
             git commit -m "chore: update compose.yaml with version ${{ env.LERNA_VERSION }} [skip ci]"
             git push origin main
+            echo "✅ Updated compose.yaml with version ${{ env.LERNA_VERSION }}"
           fi
 
+      - name: Release Summary
+        run: |
+          echo "## 🎉 Release Finalization Complete!"
+          echo ""
+          echo "**Version:** ${{ env.LERNA_VERSION }}"
+          echo "**Status:** ✅ Published to GitHub"
+          echo "**Docker Images:** ✅ Available with tag ${{ env.LERNA_VERSION }}"
+          echo "**Compose File:** ✅ Updated with new version tags"
+          echo ""
+          echo "The release is now live and ready for use! 🚀"
