--- a/.github/workflows/publish-autopilot.yaml
+++ b/.github/workflows/publish-autopilot.yaml
@@ -2,7 +2,17 @@ name: publish autopilot
 
 on:
   workflow_call:
+    inputs:
+      version:
+        description: 'Version to use for Docker tags'
+        required: false
+        type: string
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to use for Docker tags'
+        required: false
+        type: string
 
 jobs:
   publish:
@@ -22,8 +32,12 @@ jobs:
 
       - name: Get version
         run: |
-          lerna_version=$(node -p "require('./lerna.json').version")
-          echo "LERNA_VERSION=$lerna_version" >> $GITHUB_ENV
+          if [ -n "${{ inputs.version }}" ]; then
+            echo "LERNA_VERSION=${{ inputs.version }}" >> $GITHUB_ENV
+          else
+            lerna_version=$(node -p "require('./lerna.json').version")
+            echo "LERNA_VERSION=$lerna_version" >> $GITHUB_ENV
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
