--- a/.github/workflows/publish-apiserver.yaml
+++ b/.github/workflows/publish-apiserver.yaml
@@ -39,9 +39,6 @@ jobs:
             echo "LERNA_VERSION=$lerna_version" >> $GITHUB_ENV
           fi
 
-      - name: Install dependencies and build the project
-        run: npm install && npm run build
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -56,6 +53,9 @@ jobs:
           tags: "latest,${{ env.LERNA_VERSION }}"
           platforms: linux/amd64,linux/arm64
 
+      - name: Install dependencies for integration tests
+        run: npm ci --prefer-offline --no-audit
+
       - name: Starting services for integration tests
         run: |
           npm run generate:keypair
@@ -66,7 +66,7 @@ jobs:
           sed -i "s|ROUTR_EXTERNAL_ADDRS=.*|ROUTR_EXTERNAL_ADDRS=127.0.0.1|g" .env 
           sed -i "s|RTPENGINE_PUBLIC_IP=.*|RTPENGINE_PUBLIC_IP=127.0.0.1|g" .env 
           sed -i "s|ASTERISK_SIPPROXY_HOST=.*|ASTERISK_SIPPROXY_HOST=127.0.0.1|g" .env
-          sed -i "s|APISERVER_SMTP_HOST=.*|APISERVER_SMTP_HOST=mailhog|g" .env
+          sed -i "s|APISERVER_SMTP_HOST=.*|APISERVER_SMTP_HOST=mailhog|g" .env 
           sed -i "s|APISERVER_SMTP_PORT=.*|APISERVER_SMTP_PORT=1025|g" .env
           sed -i "s|APISERVER_SMTP_SECURE=.*|APISERVER_SMTP_SECURE=false|g" .env
           docker compose -f compose.yaml -f compose.dev.yaml up -d envoy routr nats postgres apiserver asterisk mailhog
