--- a/mods/autopilot/package.json
+++ b/mods/autopilot/package.json
@@ -46,16 +46,17 @@
     "@langchain/groq": "^1.0.2",
     "@langchain/ollama": "^1.1.0",
     "@langchain/openai": "^1.2.0",
+    "@langchain/textsplitters": "^1.0.1",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0",
-    "langchain": "^0.3.6",
+    "langchain": "^1.2.3",
     "moment": "^2.30.1",
     "onnxruntime-node": "1.21.1",
     "pdf-parse": "^1.1.1",
     "uuid": "^11.0.3",
     "xstate": "^5.17.3",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "gitHead": "d4aa82f7926c0f451d2f580c59ab812c74a7f579"
 }
