chore: move scripts to individual modules

--- a/mods/apiserver/package.json
+++ b/mods/apiserver/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "prebuild": "rimraf ./dist tsconfig.tsbuildinfo",
     "build": "tsc -b tsconfig.json",
-    "clean": "rimraf ./dist node_modules tsconfig.tsbuildinfo"
+    "clean": "rimraf ./dist node_modules tsconfig.tsbuildinfo",
+    "start:dev": "nodemon --exec tsx --watch src src/index.ts"
   },
   "bin": {
     "fonoster": "./dist/index.js"
