--- a/mods/mcp/package.json
+++ b/mods/mcp/package.json
@@ -18,7 +18,8 @@
     "prebuild": "rimraf ./dist tsconfig.tsbuildinfo",
     "build": "tsc -b tsconfig.json",
     "postbuild": "chmod +x ./dist/index.js",
-    "clean": "rimraf ./dist node_modules tsconfig.tsbuildinfo"
+    "clean": "rimraf ./dist node_modules tsconfig.tsbuildinfo",
+    "start:dev": "nodemon --exec tsx --watch src src/index.ts"
   },
   "dependencies": {
     "@fonoster/common": "^0.16.6",
