--- a/mods/sdk/package.json
+++ b/mods/sdk/package.json
@@ -19,7 +19,9 @@
     "build": "rollup -c rollup.config.mjs && tsc --project tsconfig.json",
     "postbuild": "mv dist/node/src/* dist/node && rm -rf dist/node/generated && cp -a src/generated dist/node/generated/ && cp dist/web/fonoster.min.js public/fonoster.min.js",
     "clean": "rimraf ./dist node_modules tsconfig.tsbuildinfo",
-    "generate:readme": "node ../../.scripts/gen-readme.cjs"
+    "generate:readme": "node ../../.scripts/gen-readme.cjs",
+    "start:demo": "npx serve -s public -l 9000",
+    "start:oauth2-demo": "npx serve public -l 9000"
   },
   "keywords": [
     "sdk",
