--- a/package.json
+++ b/package.json
@@ -8,32 +8,20 @@
   "main": "dist/index",
   "types": "dist/index",
   "workspaces": [
-    "mods/apiserver",
-    "mods/authz",
-    "mods/autopilot",
-    "mods/common",
-    "mods/ctl",
-    "mods/identity",
-    "mods/logger",
-    "mods/sdk",
-    "mods/sipnet",
-    "mods/streams",
-    "mods/types",
-    "mods/voice",
-    "mods/mcp"
+    "mods/*"
   ],
   "scripts": {
-    "start:dashboard": "NODE_ENV=development cd mods/dashboard && npm run dev",
-    "start:storybook": "NODE_ENV=development cd mods/dashboard && npm run storybook",
-    "start:apiserver": "cross-env NODE_ENV=development LOGS_LEVEL=verbose nodemon --watch mods/apiserver mods/apiserver/src/index.ts",
-    "start:authz": "cross-env NODE_ENV=development LOGS_LEVEL=verbose nodemon --watch mods/authz mods/authz/src/server/server.ts",
-    "start:voice": "cross-env NODE_ENV=development LOGS_LEVEL=verbose nodemon --watch mods/voice mods/voice/src/demo.ts",
-    "start:autopilot": "cross-env NODE_ENV=development ASSISTANT=$(pwd)/config/assistant.json LOGS_LEVEL=verbose nodemon --watch mods/autopilot mods/autopilot/src/server.ts",
+    "start:dashboard": "cross-env NODE_ENV=development npm run dev -w @fonoster/dashboard",
+    "start:storybook": "cross-env NODE_ENV=development npm run storybook -w @fonoster/dashboard",
+    "start:apiserver": "cross-env NODE_ENV=development LOGS_LEVEL=verbose npm run start:dev -w @fonoster/apiserver",
+    "start:authz": "cross-env NODE_ENV=development LOGS_LEVEL=verbose npm run start:dev -w @fonoster/authz",
+    "start:voice": "cross-env NODE_ENV=development LOGS_LEVEL=verbose npm run start:dev -w @fonoster/voice",
+    "start:autopilot": "cross-env NODE_ENV=development ASSISTANT=$(pwd)/config/assistant.json LOGS_LEVEL=verbose npm run start:dev -w @fonoster/autopilot",
     "start:services": "cross-env docker compose -f compose.yaml -f compose.dev.yaml up routr nats envoy influxdb postgres adminer mailhog rtpengine asterisk -d --remove-orphans",
-    "start:sdk-demo": "npx serve -s mods/sdk/public -l 9000",
-    "start:oauth2-demo": "npx serve mods/sdk/public -l 9000",
-    "start:audiosocket": "cross-env NODE_ENV=development LOGS_LEVEL=verbose nodemon --watch mods/streams mods/streams/src/example.ts",
-    "start:mcp": "cross-env NODE_ENV=development LOGS_LEVEL=verbose nodemon --watch mods/mcp mods/mcp/src/index.ts",
+    "start:sdk-demo": "npm run start:demo -w @fonoster/sdk",
+    "start:oauth2-demo": "npm run start:oauth2-demo -w @fonoster/sdk",
+    "start:audiosocket": "cross-env NODE_ENV=development LOGS_LEVEL=verbose npm run start:dev -w @fonoster/streams",
+    "start:mcp": "cross-env NODE_ENV=development LOGS_LEVEL=verbose npm run start:dev -w @fonoster/mcp",
     "stop:services": "cross-env docker compose -f compose.yaml -f compose.dev.yaml down",
     "build": "lerna run build",
     "prebuild": "npm run generate:prisma-clients",
