feat: add call reference on session create

--- a/compose.yaml
+++ b/compose.yaml
@@ -76,6 +76,7 @@ services:
       - AUTOPILOT_LOGS_LEVEL
       - AUTOPILOT_LOGS_TRANSPORT
       - AUTOPILOT_OPENAI_API_KEY
+      - AUTOPILOT_RECORDING_BASE_URL
       - AUTOPILOT_UNSTRUCTURED_API_KEY
       - AUTOPILOT_UNSTRUCTURED_API_URL
     volumes:
